# mvi-architecture

./: .gitignore  README.md  build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/wisekiddo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: RSAEncrypt.cpp
app/src/main/java/com/wisekiddo/: MainActivity.kt  ProjectApplication.kt  UiThread.kt
app/src/main/java/com/wisekiddo/application/: ApplicationComponent.kt  ApplicationInjector.kt  Injectable.kt  ProjectApplication.kt  ViewModelFactory.kt
app/src/main/java/com/wisekiddo/base/: BaseAction.kt  BaseIntent.kt  BaseResult.kt  BaseView.kt  BaseViewModel.kt  BaseViewState.kt
app/src/main/java/com/wisekiddo/data/: DataRepository.kt
app/src/main/java/com/wisekiddo/domain/: BaseFlowableObserver.kt  BaseSingleObserver.kt  CompletableUseCase.kt  FlowableUseCase.kt  GetDataList.kt
app/src/main/java/com/wisekiddo/enums/: TaskStatus.kt
app/src/main/java/com/wisekiddo/models/: DataViewModel.kt  DomainModel.kt  MainViewModel.kt  RemoteModel.kt  RepositoryModel.kt  StoredModel.kt
app/src/main/java/com/wisekiddo/presentation/: MainAction.kt  MainDataViewModel.kt  MainIntent.kt  MainProcessor.kt  MainResult.kt  MainUIModel.kt
app/src/main/jni/include/openssl/: dh.h  dsa.h  engine.h  rsa.h  ssl.h  ui.h
app/src/main/res/layout/: activity_details.xml  app_bar_main.xml  content_main.xml  item_person.xml  progressbar_curves.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/wisekiddo/: ExampleUnitTest.kt
(+134 files in other folders)
